--- a/src/pages/FilterByTitle.css
+++ b/src/pages/FilterByTitle.css
@@ -25,6 +25,17 @@
   border-radius: 0 50% 50% 0;
 }
 
+.search-box {
+  margin-top: 2rem;
+  margin-bottom: 2.5rem;
+}
+
+@media only screen and (max-width: 1260px) {
+  .search-box {
+    margin-top: 6rem;
+  }
+}
+
 @media only screen and (max-width: 768px) {
   #form-search-by-title {
     width: 75%;
