--- a/src/components/scrollToTop/ScrollToTop.css
+++ b/src/components/scrollToTop/ScrollToTop.css
@@ -4,8 +4,14 @@
   letter-spacing: 3px;
   transform: rotate(0.75turn);
   position: fixed;
-  top: 65vh;
+  top: 60vh;
   right: -2.4rem;
+}
+
+@media only screen and (min-width: 1400px) {
+  .scroll-text {
+    right: 2.5rem;
+  }
 }
 
 @media only screen and (max-width: 1300px) {
