--- a/src/components/movie/Movie.css
+++ b/src/components/movie/Movie.css
@@ -1,14 +1,25 @@
 .movie {
   cursor: pointer;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
 }
 
 .movie:hover {
-  transform: translateY(-15px);
-  transition: ease 0.3s;
-  transition-delay: 0.2s;
+  transition: ease-in 0.2s;
+  -webkit-box-shadow: 0px 0px 12px 16px rgb(239, 108, 0);
+  -moz-box-shadow: 0px 0px 12px 16px rgb(239, 108, 0);
+  box-shadow: 0px 0px 12px 16px rgb(239, 108, 0);
+  z-index: 10;
 }
 
 .poster-movie {
   z-index: 4;
+  max-width: 210px;
+  max-height: 314px;
 }
 
+@media (min-width: 1280px) {
+  .poster-movie {
+    min-width: 209px;
+    min-height: 313px;
+  }
+}
