--- a/src/components/movie-modal/MovieModal.css
+++ b/src/components/movie-modal/MovieModal.css
@@ -1,6 +1,9 @@
 .modal-backdrop {
   background-color: black;
-  filter: opacity(0.9);
+}
+
+.modal-z-index {
+  z-index: 9999;
 }
 
 .hover:hover {
@@ -8,7 +11,13 @@
 }
 
 .modal-shadow {
-  box-shadow: 0 2px 4px black;
+  -webkit-box-shadow: 0px 0px 160px 80px rgb(0, 0, 0);
+  -moz-box-shadow: 0px 0px 160px 80px rgb(0, 0, 0);
+  box-shadow: 0px 0px 160px 80px rgb(0, 0, 0);
+}
+
+.drop-shadow {
+  filter: drop-shadow(0 0 6px black);
 }
 
 .orange-hover:hover {
